# crc-atlas

./: .gitignore  LICENSE  README.md  data  main.nf  nextflow.config  params_build_atlas.yaml  pyproject.toml  results  run_build_atlas.sh
analyses/01_dataloader/: Bian_2018_Science.py  Borras_2023_Cell_Discov.py  Burclaff_2022_Cell_Mol_Gastroenterol_Hepatol.py  Che_2021_Cell_Discov.py  Chen_2021_Cell.py  Chen_2024_Cancer_Cell.py  Conde_2022_Science.py  Elmentaite_2021_Nature.py  GarridoTrigo_2023_Nat_Commun.py  Giguelay_2022_Theranostics.py  Guo_2022_JCI_Insight.py  HTAPP_HTAN.py  Han_2020_Nature.py  Harmon_2023_Nat_Cancer.py  He_2020_Genome_Biol.py  Huang_2024_Nat_Cancer.py  James_2020_Nat_Immunol.py  Ji_2024_Cancer_Lett.py  Ji_2024_PLoS_Genet.py  Joanito_2022_Nat_Genet.py  Khaliq_2022_Genome_Biol.py  Kong_2023_Immunity.py  Lee_2020_Nat_Genet.py  Li_2017_Nat_Genet.py  Li_2023_Cancer_Cell.py  Liu_2022_Cancer_Cell.py  Liu_2024_Cancer_Res.py  MUI_Innsbruck.py  MUI_Innsbruck_AbSeq.py  Masuda_2022_JCI_Insight.py  Mazzurana_2021_Cell_Res.py  Parikh_2019_Nature.py  Pelka_2021_Cell.py  Qi_2022_Nat_Commun.py  Qian_2020_Cell_Res.py  Qin_2023_Cell_Rep_Med.py  Sathe_2023_Clin_Cancer_Res.py  (+16 more)
conf/: base.config  build_atlas.config
envs/: 2024-build_atlas-scanpy.def  2024-build_atlas-scanpy.yaml  2024-scvi-tools.def  2024-scvi-tools.yaml  IMC.yaml  cNMF.yaml  containers  nichecompass.yml  xenium.yml
subworkflows/: Integrate_datasets.nf  Load_datasets.nf  Tidy_atlas.nf
tables/: colon_atas_cell_type_marker_genes.csv  reference_meta.yaml
workflows/: build_atlas.nf
(+73 files in other folders)
